# engulfment-integrator

./: .gitignore  CMakeLists.txt  COPYING  README.md  makefile
docs/: index.html
docs/doxygen/: Doxyfile
docs/sphinx/source/: conf.py  model.rst
extras/scripts/: plot-inspiral.py
extras/stellar_profiles/: 10rsun.h5  point.h5
src/: global.h  io.c  io.h  main.c  model.c  model.h  star.c  star.h  units.c  units.h  utils.c  utils.h
test/: input_keplerian_rotation.txt  input_keplerian_rotation_2.txt  interpolation.c  keplerian_rotation.c  keplerian_rotation_2.c  make_function.py
